reload viewers every 15 sec

--- a/public/elements/sps-app.html
+++ b/public/elements/sps-app.html
@@ -531,6 +531,9 @@ Example:
           if(mainapp.page === "presentations" || mainapp.page === "presentation_details") {
             self.$.presentationData.generateRequest();
           }
+          if(mainapp.page === "viewers") {
+            self.$.viewersAjax.generateRequest();
+          }
         }, 15000);
         setInterval(function() {
           self.$.adminStatusAjax.generateRequest();
