--- a/public/elements/sps-page-viewers.html
+++ b/public/elements/sps-page-viewers.html
@@ -71,7 +71,7 @@
     </div>
     <paper-fab id="addButton" icon="add" class="add" on-click="_doAddDialog"></paper-fab>
     <paper-fab id="editButton" icon="create" class="edit"></paper-fab>
-    <paper-fab id="detailsButton" icon="image:remove-red-eye" class="details"></paper-fab>
+    <paper-fab id="detailsButton" icon="image:remove-red-eye" class="details" on-click="_doDetailsPage"></paper-fab>
     <paper-fab id="deleteButton" icon="delete" class="remove" on-click="_doDeleteDialog"></paper-fab>
   </template>
   <script>
@@ -144,6 +144,20 @@
       },
       _doDeleteDialog: function(e) {
         this.$.presDeleteDialog.open();
+      },
+      _doDetailsPage: function() {
+        var arr = [];
+        for (var k in this.selectedViewers) {
+          if (!this.selectedViewers.hasOwnProperty(k)) continue;
+          arr.push(k);
+        }
+        //console.log('/presentations/details/' + arr.join(","));
+        page('/viewers/details/' + arr.join(","));
+        var arr = Polymer.dom(this.$.mDiv).querySelectorAll("#dt");
+        for(var key in arr) {
+            if(!arr.hasOwnProperty(key)) continue;
+            arr[key].deselectAll();
+        }
       },
       _onViewersAjaxResp: function(e) {
         //this.$.dt.reload();
